<resources>
    <string name="app_name">CityNights</string>
    <string name="app_label">CityNights</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_search">Search</string>
    <string name="title_activity_after_search">AfterSearchActivity</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="signupbtn">Registrieren</string>
    <string name="change_pic">change_pic</string>
    <string name="delete_pic">delete_pic</string>
    <string name="email">email</string>
    <string name="DayOfBirth">DayOfBirth</string>
    <string name="day_prompt">day_prompt</string>
    <string name="month_prompt">month_prompt</string>
    <string name="year_prompt">year_prompt</string>
    <string name="change_password">change_password</string>
    <string name="save_profile">save_profile</string>
    <string name="cancel_profile">cancel_profile</string>
    <string name="button_comments">button_comments</string>
    <string name="button_favorites">button_favorites</string>
    <string name="password_again">password_again</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">Home</string>
    <string name="action_suche">Suche</string>
    <string name="action_navigation">Navigation</string>
    <string name="action_konto">Konto</string>
    <string name="action_buchungen">Buchungen</string>
    <string name="action_favoriten">Favoriten</string>
    <string name="action_einstellungen">Einstellungen</string>
    <string name="action_uber">Über Uns</string>
    <string name="SignUp">Registrieren</string>
    <string name="SignIn">Login</string>
    <string name="search_label">Zielort</string>
    <string name="search_hint">Zielort</string>
    <string name="ButtonBook">Buchen</string>
    <string name="title_activity_maps">Map</string>
</resources>
