<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_suche"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_suche"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_navigation"
        android:orderInCategory="100"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/action_navigation"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_einstellungen"
        android:orderInCategory="100"
        android:title="@string/action_einstellungen"
        app:showAsAction="never" />
</menu>
