<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:weightSum="1">
    <!--tools:context="com.app.selina.CH.ProfileTestActivity"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profilepic"
                android:layout_width="188dp"
                android:layout_height="188dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/profilbild" />

            <RelativeLayout
                android:id="@+id/rlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/pic_change_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="right|center"
                    android:gravity="left|center"
                    android:onClick="onEditPic"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="@string/change_pic" />

                <Button
                    android:id="@+id/pic_delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center|right"
                    android:onClick="onDeletePic"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:singleLine="false"
                    android:text="@string/delete_pic" />

            </RelativeLayout>


            <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_alignEnd="@+id/favorites_button"
                android:layout_alignRight="@+id/favorites_button"
                android:layout_centerVertical="true" />


            <TextView
                android:id="@+id/usernametxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:layout_gravity="center_horizontal" />



            <TextView
                android:id="@+id/citytxt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Ort" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:layout_gravity="center_horizontal" />


            <TextView
                android:id="@+id/txtemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="13dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/txtbday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/DayOfBirth" />

            <!--
            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="date"
                android:text="01.04.1989" />
                -->
            <LinearLayout
                android:id="@+id/spinner_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtdate"
                android:orientation="horizontal"
                android:weightSum="3"
                android:gravity="center">

                <Spinner
                    android:id="@+id/spinner_day"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/day_array"
                    android:prompt="@string/day_prompt"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spinner_month"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/month_array"
                    android:prompt="@string/month_prompt"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spinner_year"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:entries="@array/year_array"
                    android:prompt="@string/year_prompt"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <Space
                android:id="@+id/sp2"
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            //TODO Musikstile ausklappbar

            <TableLayout
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="House"
                        android:id="@+id/ms_house"
                        android:layout_weight="0.11"
                        android:checked="true"
                        android:layout_column="0"
                        android:clickable="false"
                        android:enabled="true"
                        android:focusable="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Charts"
                        android:id="@+id/ms_charts"
                        android:layout_column="12"
                        android:checked="true"
                        android:enabled="true"
                        android:focusable="true" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Electro"
                        android:id="@+id/ms_electro"
                        android:layout_weight="0.11"
                        android:checked="true"
                        android:layout_column="0"
                        android:enabled="true"
                        android:focusable="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rock"
                        android:id="@+id/ms_rock"
                        android:layout_column="12"
                        android:checked="false"
                        android:enabled="true"
                        android:focusable="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HipHop"
                        android:id="@+id/ms_hiphop"
                        android:layout_weight="0.11"
                        android:checked="false"
                        android:layout_column="0"
                        android:enabled="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Metal"
                        android:id="@+id/ms_metal"
                        android:layout_column="12"
                        android:checked="false"
                        android:enabled="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="RnB"
                        android:id="@+id/ms_rnb"
                        android:layout_weight="0.11"
                        android:checked="false"
                        android:layout_column="0"
                        android:enabled="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dubstep"
                        android:id="@+id/ms_dubstep"
                        android:layout_column="12"
                        android:checked="false"
                        android:enabled="true" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Schlager"
                        android:id="@+id/ms_schlager"
                        android:layout_weight="0.11"
                        android:checked="false"
                        android:layout_column="0"
                        android:enabled="true" />

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Rap"
                        android:id="@+id/ms_rap"
                        android:layout_column="12"
                        android:checked="false"
                        android:enabled="true" />
                </TableRow>
            </TableLayout>
            -->
            //TODO Preisrahmen ausklappbar



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preisrahmen"
                android:id="@+id/preisrahmen"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="€"
                    android:id="@+id/pr1"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textSize="18dp"
                    android:enabled="true"
                    android:focusable="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="€€"
                    android:id="@+id/pr2"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textSize="18dp"
                    android:enabled="true"
                    android:focusable="true" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="€€€"
                    android:id="@+id/pr3"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="18dp"
                    android:enabled="true"
                    android:focusable="true" />

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:id="@+id/password_change_button"
                android:gravity="center"
                android:layout_gravity="center"
                android:onClick="onChangePassword"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlay2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_profile"
                    android:id="@+id/profile_save_button"
                    android:gravity="left|center"
                    android:layout_gravity="right|center"
                    android:onClick="onSaveProfile"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_profile"
                    android:id="@+id/profile_cancel_button"
                    android:gravity="center|right"
                    android:singleLine="false"
                    android:onClick="onCancelProfile"
                    android:paddingRight="30dp"
                    android:paddingLeft="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>